<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="344dp"
                android:minWidth="344dp"
                android:layout_height="148dp"
                android:layout_gravity="center|top"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/design">

                    <TextView
                        android:id="@+id/titleInglizUzbek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingliz_uzbek"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                    
                    <TextView
                        android:id="@+id/tv_infoIU"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text1"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/titleInglizUzbek"
                        app:layout_constraintStart_toStartOf="@id/titleInglizUzbek"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@drawable/img"/>

                    <Button
                        android:id="@+id/btn_learnIU"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:minWidth="80dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/learn"/>
                    <Button
                        android:id="@+id/btn_gameIU"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/game"
                        app:layout_constraintStart_toEndOf="@id/btn_learnIU"
                        app:layout_constraintBottom_toBottomOf="@id/btn_learnIU"
                        android:layout_marginStart="8dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="344dp"
                android:minWidth="344dp"
                android:layout_height="148dp"
                android:layout_gravity="center|top"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/design">

                    <TextView
                        android:id="@+id/titleUzbekIngliz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uzbek_ingliz"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_infoUI"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text2"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/titleUzbekIngliz"
                        app:layout_constraintStart_toStartOf="@id/titleUzbekIngliz"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginHorizontal="16dp"
                        android:background="@drawable/img"/>

                    <Button
                        android:id="@+id/btn_learnUI"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:minWidth="80dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/learn"/>
                    <Button
                        android:id="@+id/btn_gameUI"
                        android:layout_width="80dp"
                        android:layout_height="40dp"
                        android:text="@string/game"
                        app:layout_constraintStart_toEndOf="@id/btn_learnUI"
                        app:layout_constraintBottom_toBottomOf="@id/btn_learnUI"
                        android:layout_marginStart="8dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="344dp"
                android:minWidth="344dp"
                android:layout_height="148dp"
                android:layout_gravity="center|top"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/design">

                    <TextView
                        android:id="@+id/titleDictionary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dictionary"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_infoD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text3"
                        android:textSize="16sp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/titleDictionary"
                        app:layout_constraintStart_toStartOf="@id/titleDictionary"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginHorizontal="16dp"
                        android:src="@drawable/dictionary_image"/>

                    <Button
                        android:id="@+id/btn_learnD"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:minWidth="80dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_infoD"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/learn"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="344dp"
                android:minWidth="344dp"
                android:layout_height="148dp"
                android:layout_gravity="center|top"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/design">

                    <TextView
                        android:id="@+id/title_sh_stories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/short_stories"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_info_sh_s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text4"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/title_sh_stories"
                        app:layout_constraintStart_toStartOf="@id/title_sh_stories"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginHorizontal="16dp"
                        android:src="@drawable/dictionary_image"/>

                    <Button
                        android:id="@+id/btn_learn_sh_s"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:minWidth="80dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_info_sh_s"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginVertical="8dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/start"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>